<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".test.EspressActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit"
        app:layout_constraintTop_toBottomOf="@id/text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="say hello"
        app:layout_constraintTop_toBottomOf="@id/edit"
        android:id="@+id/hello"
        android:onClick="sayHello"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recycler"
        android:text="recycler"
        app:layout_constraintTop_toBottomOf="@id/hello"
        android:onClick="sayHello"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/web"
        android:text="web"
        app:layout_constraintTop_toBottomOf="@id/recycler"
        android:onClick="sayHello"/>

</android.support.constraint.ConstraintLayout>